# portaldot-hackathon-2026-inkport-dmk

./: .gitignore  BUIDL.md  CLAUDE.md  DORAHACKS.md  LICENSE  PROJECT.md  README.md  SUBMISSION.md  inkport.config.py  portaldot-reference.md
contracts/: Auction.sol  Bank.sol  Bits.sol  Caller.sol  Cast.sol  Counter.sol  ERC20.sol  ERC721.sol  Enum.sol  Escrow.sol  Flipper.sol  Greeter.sol  IdStore.sol  Inc.sol  Inherit.sol  IntList.sol  MinMax.sol  Narrow16.sol  NarrowMath.sol  Overload.sol  Ownable.sol  Pub.sol  Signed.sol  SimpleStorage.sol  Structs.sol  Sum.sol  Target.sol  Timed.sol  Unchecked.sol  Voting.sol
deployments/: portaldot.json
docs/: GUIDE.md  seal-backend-spec.md
ink3-contracts/flipper/: Cargo.toml  lib.rs
inkport/: pyproject.toml
inkport/inkport/: cli.py  config.py  pipeline.py
inkport/tests/: test_cli.py
inkport_chain/: portaldot.py  run_seal_e2e.py  strip_wasm.py  test_contract.py
onchain-contracts/: deploy_counter.py  e2e_counter.py
onchain-contracts/counter/: Cargo.toml
playground/: .env.local.example  middleware.ts  next.config.ts  package.json  tsconfig.json
playground/__tests__/: env.test.ts  session.test.ts  shell.test.ts  sse.test.ts
playground/app/: globals.css  layout.tsx  page.tsx
playground/components/: ContractCard.tsx  ContractsList.tsx  (+7 more)
tests/: Auction.json  Bank.json  Bits.json  Caller.json  Cast.json  Counter.json  ERC20.json  ERC721.json  Enum.json  Escrow.json  Flipper.json  Greeter.json  IdStore.json  Inc.json  Inherit.json  IntList.json  MinMax.json  Narrow16.json  NarrowMath.json  Overload.json  Ownable.json  Pub.json  Signed.json  SimpleStorage.json  Structs.json  Sum.json  Target.json  Timed.json  Unchecked.json  Voting.json
translator/: Cargo.toml
translator/fixtures/: ERC20.sol
translator/src/: codegen.rs  codegen_seal.rs  ir.rs  lib.rs  lower.rs  main.rs  parse.rs  types.rs
translator/tests/: erc20.rs
(+60 files in other folders)
