[project]
name = "inkport"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "substrate-interface>=1.7"]

[project.scripts]
inkport = "inkport.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
