[package]
name = "inkport-translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inkport-translate"
path = "src/main.rs"

[lib]
name = "inkport_translate"
path = "src/lib.rs"

[dependencies]
solang-parser = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
