[package]
name = "flipper"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_primitives = { version = "=3.4.0", default-features = false }
ink_metadata = { version = "=3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.4.0", default-features = false }
ink_storage = { version = "=3.4.0", default-features = false }
ink_lang = { version = "=3.4.0", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "=2.1.1", default-features = false, features = ["derive"], optional = true }
# pins to keep the 2022 tree self-consistent under -Z minimal-versions
parity-scale-codec-derive = "=3.1.4"
syn = "=1.0.98"
proc-macro2 = "=1.0.43"
quote = "=1.0.21"
proc-macro-crate = "=1.1.3"

[lib]
name = "flipper"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["ink_metadata/std","ink_env/std","ink_storage/std","ink_primitives/std","scale/std","scale-info/std"]
ink-as-dependency = []
